Feat: create cli.

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,1 +1,10 @@
-sources = files('main.c')
+sources = files(
+  'main.c',
+  'arg.c',
+  'die.c',
+  'algorithm.c',
+)
+
+subdir('core')
+
+sources += core_sources
