--- a/src/core/math/meson.build
+++ b/src/core/math/meson.build
@@ -1,7 +1,3 @@
-subdir('vec')
-subdir('matrix')
-
-math_sources = files()
-
-math_sources += vec_sources
-math_sources += matrix_sources
+math_sources = files(
+  'matrix/matrix.c',
+)
