--- a/src/core/meson.build
+++ b/src/core/meson.build
@@ -1,7 +1,11 @@
 subdir('math')
+subdir('image_formats')
+subdir('algorithms')
 
 core_sources = files(
   'core.c',
 )
 
 core_sources += math_sources
+core_sources += image_formats_sources
+core_sources += algorithms_sources
