--- a/npeg/src/meson.build
+++ b/npeg/src/meson.build
@@ -2,10 +2,8 @@ subdir('math')
 subdir('img')
 subdir('algorithms')
 
-npeg_sources = files(
-)
+npeg_sources = files()
 
 npeg_sources += math_sources
 npeg_sources += img_sources
 npeg_sources += algorithms_sources
-
