DevOps: add pre-commits

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 build
 release_build
+release
 .cache
 cache
 assets
@@ -11,6 +12,7 @@ assets
 *.jpg
 optimization.md
 __pycache__
-dist 
+dist
 *.egg-info
 *.so
+.tox
