--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,12 @@ repos:
 
 -   repo: local
     hooks:
+    - id: ruff
+      name: ruff
+      entry: poetry run ruff
+      language: system
+      types: [python]
+
     - id: pylint
       name: pylint
       entry: poetry run pylint npeg
@@ -20,11 +26,12 @@ repos:
       language: system
       types: [python]
 
-    - id: ruff
-      name: ruff
-      entry: poetry run ruff
+    - id: pyright
+      name: pyright
+      entry: poetry run pyright
       language: system
       types: [python]
+
 
     - id: black
       name: black
