tests: add tests for "img_read".

--- a/tox.ini
+++ b/tox.ini
@@ -1,27 +1,24 @@
 [tox]
-envlist = py10,typechecks,stylechecks,tests
+envlist = py10,tests
 isolated_build = True
 
-[testenv:tests]
+[testenv]
+description = Linting, checking syntax and running tests
 allowlist_externals = poetry
-commands_pre =
+pre_commands =
     poetry install --no-root --sync
 commands =
-    poetry run pytest tests
-
-[testenv:typechecks]
-allowlist_externals = poetry
-commands_pre =
-    poetry install --no-root --sync
-commands =
+    poetry run pytest -v tests
     poetry run mypy npeg
     poetry run pyright npeg
-
-[testenv:stylechecks]
-allowlist_externals = poetry
-commands_pre =
-    poetry install --no-root --sync
-commands =
     poetry run ruff npeg
     poetry run pylint npeg
     poetry run black --check npeg
+
+[testenv:tests]
+description = Only running tests
+allowlist_externals = poetry
+pre_commands =
+    poetry install --no-root --sync
+commands =
+    poetry run pytest -v tests
