--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,14 +25,15 @@ black = "^23.1.0"
 pyright = "^1.1.299"
 mypy = "^1.1.1"
 pre-commit = "^3.2.0"
+tox = "^4.4.7"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-release = "scripts.build:release"
-dev = "scripts.build:dev"
+build_release = "scripts.build:build_release"
+build_dev = "scripts.build:build_dev"
 
 
 [tool.pylint]
@@ -43,6 +44,8 @@ disable = [
     "missing-module-docstring",
     "too-few-public-methods",
     "cyclic-import",
+    "unspecified-encoding",
+    "redefined-outer-name",
 ]
 
 [tool.ruff]
