--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ allowlist_externals = poetry
 pre_commands =
     poetry install --no-root --sync
 commands =
+    poetry run build_release_lib
     poetry run pytest -v tests
     poetry run mypy npeg
     poetry run pyright npeg
@@ -21,4 +22,5 @@ allowlist_externals = poetry
 pre_commands =
     poetry install --no-root --sync
 commands =
+    poetry run build_release_lib
     poetry run pytest -v tests
