--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,7 +18,10 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+    - name: Install c dependencies
+      run: |
+        apt update && apt install clang meson
+    - name: Install python dependencies
       run: |
         python -m pip install poetry
         poetry install
