--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,10 @@
 [tox]
-envlist = py10,tests
+envlist = py310,tests
 isolated_build = True
+
+[gh-actions]
+python =
+    3.10: py310
 
 [testenv]
 description = Linting, checking syntax and running tests
