--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ commands =
     poetry run pyright npeg
     poetry run ruff npeg
     poetry run pylint npeg
-    poetry run black --check npeg
+    poetry run black --check --diff npeg
 
 [testenv:tests]
 description = Only running tests
