--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,12 @@ mypy = "^1.1.1"
 pre-commit = "^3.2.0"
 tox = "^4.4.7"
 tox-gh-actions = "^3.1.0"
+commitizen = "^2.42.1"
+
+[tool.commitizen]
+name = "cz_conventional_commits"
+version = "0.0.1"
+tag_format = "$version"
 
 [build-system]
 requires = ["poetry-core"]
