ci: add project version control

--- a/core/src/meson.build
+++ b/core/src/meson.build
@@ -4,6 +4,10 @@ subdir('algorithms')
 
 npeg_sources = files()
 
+dev_sources = files(
+  'dev.c'
+)
+
 npeg_sources += math_sources
 npeg_sources += img_sources
 npeg_sources += algorithms_sources
