--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,7 +20,10 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - name: Install meson 
-      uses: BSFishy/meson-build@v1.0.3 egor-tensin/setup-clang@v1
+      uses: BSFishy/meson-build@v1.0.3 
+
+    - name: Install clang
+      uses: egor-tensin/setup-clang@v1
 
     - name: Install python dependencies
       run: |
