--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,10 +19,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install meson 
-      uses: BSFishy/meson-build@v1.0.3 
-
-    - name: Install clang
+    - name: Set up clang
       uses: egor-tensin/setup-clang@v1
 
     - name: Install python dependencies
