--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ pre-commit = "^3.2.0"
 tox = "^4.4.7"
 tox-gh-actions = "^3.1.0"
 commitizen = "^2.42.1"
+meson = "^1.0.1"
 
 [tool.commitizen]
 name = "cz_conventional_commits"
