--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ tox = "^4.4.7"
 tox-gh-actions = "^3.1.0"
 commitizen = "^2.42.1"
 meson = "^1.0.1"
+ninja = "^1.11.1"
 
 [tool.commitizen]
 name = "cz_conventional_commits"
