--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,7 @@ disable = [
     "cyclic-import",
     "unspecified-encoding",
     "redefined-outer-name",
+    "useless-return",
 ]
 
 [tool.ruff]
