--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,6 +22,9 @@ jobs:
     - name: Set up clang
       uses: egor-tensin/setup-clang@v1
 
+    - name: MinGw
+      uses: egor-tensin/setup-mingw@v2
+
     - name: Install python dependencies
       run: |
         python -m pip install poetry
