--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,6 @@ allowlist_externals = poetry
 pre_commands =
     poetry install --no-root --sync
 commands =
-    poetry run build_release_lib
     poetry run pytest -v tests
     poetry run mypy npeg
     poetry run pyright npeg
@@ -26,5 +25,4 @@ allowlist_externals = poetry
 pre_commands =
     poetry install --no-root --sync
 commands =
-    poetry run build_release_lib
-    poetry run pytest -v tests
+    poetry run pytest -sv tests
